Fix cursor-line and color-solumn colors

--- a/default.mustache
+++ b/default.mustache
@@ -12,7 +12,6 @@ color-link constant.string "#{{base0B-hex}}"
 color-link identifier "#{{base08-hex}}"
 color-link identifier.class "#{{base0A-hex}}"
 
-
 color-link preproc "#{{base0A-hex}}"
 
 color-link special "#{{base0C-hex}}"
@@ -41,5 +40,5 @@ color-link diff-deleted "#{{base08-hex}},#{{base01-hex}}"
 color-link gutter-error "#{{base08-hex}},#{{base01-hex}}"
 color-link gutter-warning "#{{base0D-hex}},#{{base01-hex}}"
 
-color-link cursor-line ",#{{base01-hex}}"
-color-link color-column ",#{{base01-hex}}"
+color-link cursor-line "#{{base01-hex}}"
+color-link color-column "#{{base01-hex}}"
